# assignment1-basics

./: .gitignore  analyze_vocab.py  blog.md  pyproject.toml  split.py  tokenizer_experiments.py
configs/: all_params.example.yaml  tinystories_params.yaml
cpp/: CMakeLists.txt  bpe.cpp  bpe.hpp
cs336_basics/: BPETokenizer.py  CausalMultiHeadSelfAttention.py  Linear.py  RMSNorm.py  Softmax.py  SwiGLU.py  cli.py  generate.py  pretokenization.py  runtime.py  text_pipeline.py  train.py  transformer_block.py  yaml_config.py
cs336_basics/optimizer/: adamw.py
cs336_basics/utils/: checkpointing.py  dataloader.py
tests/: adapters.py  common.py  test_train_bpe.py
tools/: adamw_account.py  profile_bpe_encode.py  resource_account.py  split.py
